[package]
name = "hello_tja1051"
version = "0.1.0"
edition.workspace = true

[dependencies]
bxcan = { workspace = true }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
panic-halt = { workspace = true }
rtt-target = { workspace = true, features = ["cortex-m"]  }
stm32f4xx-hal = { workspace = true, features = ["stm32f446", "rt", "can"] }
