[package]
name = "hello_rotary_encoder"
version = "0.1.0"
edition.workspace = true

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
panic-halt.workspace = true
rtt-target = { workspace = true, features = ["cortex-m"]  }
stm32f4xx-hal = { workspace = true, features = ["rt", "stm32f446"] }
